--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install dependencies
         continue-on-error: true
         run: |
-          brew reinstall python@3.8
+          brew link python@3.8
           which python3
           python3 --version
           which python
