--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,19 @@ jobs:
         continue-on-error: true
         run: |
           python3 test.py
+  Windows:
+    name: Test on Windows
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Install dependencies
+        continue-on-error: true
+        run: |
+          choco install python --no-progress --version 3.6.8
+          # python install.py
+          which python
+          pip install -r requirements.txt
+      - name: Run tests
+        continue-on-error: true
+        run: |
+          python3 test.py
