--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
       - name: Run tests
         continue-on-error: true
         run: |
-          python3 test.py
+          python test.py
