--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install dependencies
-        # continue-on-error: true
+        continue-on-error: true
         run: |
           choco install python --no-progress --version 3.6.8
           # python install.py
