--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,8 @@ jobs:
           which python
           pip install -r requirements.txt
       - name: Run tests
-        
         run: |
+          echo "GLPATH=C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\etc;C:\Program Files\GridLAB-D\lib;C:\Program Files\GridLAB-D\samples;C:\Program Files\GridLAB-D\rt;C:\Program Files\GridLAB-D\tmy" >> $GITHUB_ENV
+          echo "GRIDLABD=C:\Program Files\GridLAB-D" >>$GITHUB_ENV
+          echo "/c/Program files (x86)/Graphviz2.38/bin;/c/Program Files/GridLAB-D/bin:/c/Program Files/GridLAB-D/lib:/c/Program files (x86)/Graphviz2.38/bin:$PATH" >> $GITHUB_PATH
           python test.py
