--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
           choco install graphviz
           # python install.py
           which python
-          echo "/c/Program files (x86)/Graphviz2.38/bin;/c/Program Files/GridLAB-D/bin:/c/Program Files/GridLAB-D/lib:/c/Program files (x86)/Graphviz2.38/bin:$PATH" >> $GITHUB_PATH
           pip install -r requirements.txt
       - name: Run tests
         run: |
+          set PATH=C:\Program files (x86)\Graphviz2.38\bin;C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\lib;C:\Program files (x86)\Graphviz2.38\bin;$PATH;%PATH%
           python test.py
