--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,15 +30,19 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         continue-on-error: true
+        shell: bash
         run: |
           choco install python --no-progress --version 3.6.8
-          choco install graphviz
+          # choco install graphviz
           which python
           # python install.py
-          pip install wheel
-          pip install pygraphviz
+          # pip install wheel
+          # pip install pygraphviz
           # pip install -r requirements.txt
+          # echo "C:\Program files (x86)\Graphviz2.38\bin;C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\lib;C:\Program files (x86)\Graphviz2.38\bin" >> $GITHUB_PATH
+          echo "/c/Program files (x86)/Graphviz2.38/bin;/c/Program Files/GridLAB-D/bin;/c/Program Files/GridLAB-D/lib;/c/Program files (x86)/Graphviz2.38/bin" >> $GITHUB_PATH
       - name: Run tests
+        shell: bash
         run: |
-          echo "C:\Program files (x86)\Graphviz2.38\bin;C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\lib;C:\Program files (x86)\Graphviz2.38\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          echo "/c/Program files (x86)/Graphviz2.38/bin;/c/Program Files/GridLAB-D/bin;/c/Program Files/GridLAB-D/lib;/c/Program files (x86)/Graphviz2.38/bin" >> $GITHUB_PATH         
           python test.py
