--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,9 @@ jobs:
           # pip install pygraphviz
           # pip install -r requirements.txt
           # echo "C:\Program files (x86)\Graphviz2.38\bin;C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\lib;C:\Program files (x86)\Graphviz2.38\bin" >> $GITHUB_PATH
-          # echo "/c/Program files (x86)/Graphviz2.38/bin;/c/Program Files/GridLAB-D/bin;/c/Program Files/GridLAB-D/lib;/c/Program files (x86)/Graphviz2.38/bin" >> $GITHUB_PATH
+          echo "C:Program files (x86)\\Graphviz2.38\\bin:C:Program Files\\GridLAB-D\\bin:C:Program Files\\GridLAB-D\\lib:C:Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
       - name: Run tests
         shell: bash
         run: |
-          echo "C:Program files (x86)\\Graphviz2.38\\bin:C:Program Files\\GridLAB-D\\bin:C:Program Files\\GridLAB-D\\lib:C:Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
+          # echo "C:Program files (x86)\\Graphviz2.38\\bin:C:Program Files\\GridLAB-D\\bin:C:Program Files\\GridLAB-D\\lib:C:Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
           python test.py
