--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,10 @@ jobs:
           # pip install wheel
           # pip install pygraphviz
           # pip install -r requirements.txt
-          # echo "C:\Program files (x86)\Graphviz2.38\bin;C:\Program Files\GridLAB-D\bin;C:\Program Files\GridLAB-D\lib;C:\Program files (x86)\Graphviz2.38\bin" >> $GITHUB_PATH
           python install.py
-          echo "C:Program files (x86)\\Graphviz2.38\\bin:C:Program Files\\GridLAB-D\\bin:C:Program Files\\GridLAB-D\\lib:C:Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
+          echo "C:\\Program files (x86)\\Graphviz2.38\\bin:C:\\Program Files\\GridLAB-D\\bin:C:\\Program Files\\GridLAB-D\\lib:C:\\Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
       - name: Run tests
         shell: bash
         run: |
-          # echo "C:Program files (x86)\\Graphviz2.38\\bin:C:Program Files\\GridLAB-D\\bin:C:Program Files\\GridLAB-D\\lib:C:Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
           # python test.py
           python script.py
