--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         continue-on-error: true
-        # shell: bash
+        shell: bash
         run: |
           choco install python --no-progress --version 3.6.8
           # choco install graphviz
@@ -40,10 +40,9 @@ jobs:
           # pip install pygraphviz
           # pip install -r requirements.txt
           python install.py
-          # echo "C:\\Program files (x86)\\Graphviz2.38\\bin:C:\\Program Files\\GridLAB-D\\bin:C:\\Program Files\\GridLAB-D\\lib:C:\\Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
+          echo "C:\\Program files (x86)\\Graphviz2.38\\bin;C:\\Program Files\\GridLAB-D\\bin;C:\\Program Files\\GridLAB-D\\lib;C:\\Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
           refreshenv
       - name: Run tests
-        shell: bash
         run: |
           # python test.py
           python script.py
