--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: OMF Integration Tests
 
 on: push
-        
+
 jobs:
   macOS:
     name: Test on macOS
@@ -23,25 +23,27 @@ jobs:
   Windows:
     name: Test on Windows
     runs-on: windows-latest
-    env:
-            GLPATH: "C:\\Program Files\\GridLAB-D\\bin;C:\\Program Files\\GridLAB-D\\etc;C:\\Program Files\\GridLAB-D\\lib;C:\\Program Files\\GridLAB-D\\samples;C:\\Program Files\\GridLAB-D\\rt;C:\\Program Files\\GridLAB-D\\tmy"
-            GRIDLABD: "C:\\Program Files\\GridLAB-D"
     steps:
       - uses: actions/checkout@v2
+      - name: Fix Pathing
+        continue-on-error: true
+        shell: bash
+        run: |
+          echo "GLPATH=C:\\Program Files\\GridLAB-D\\bin;C:\\Program Files\\GridLAB-D\\etc;C:\\Program Files\\GridLAB-D\\lib;C:\\Program Files\\GridLAB-D\\samples;C:\\Program Files\\GridLAB-D\\rt;C:\\Program Files\\GridLAB-D\\tmy" >> $GITHUB_ENV
+          echo "GRIDLABD=C:\\Program Files\\GridLAB-D" >> $GITHUB_ENV
+          echo "C:\\Program files (x86)\\Graphviz2.38\\bin;C:\\Program Files\\GridLAB-D\\bin;C:\\Program Files\\GridLAB-D\\lib;C:\\Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
       - name: Install dependencies
         continue-on-error: true
         shell: bash
         run: |
           choco install python --no-progress --version 3.6.8
-          # choco install graphviz
+          choco install graphviz
           # which python
           # python install.py
           # pip install wheel
           # pip install pygraphviz
           # pip install -r requirements.txt
           python install.py
-          echo "C:\\Program files (x86)\\Graphviz2.38\\bin;C:\\Program Files\\GridLAB-D\\bin;C:\\Program Files\\GridLAB-D\\lib;C:\\Program files (x86)\\Graphviz2.38\\bin" >> $GITHUB_PATH
-          refreshenv
       - name: Run tests
         run: |
           # python test.py
