--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,3 +49,8 @@ jobs:
         run: |
           # python test.py
           python script.py
+      - name: Start SSH session
+        uses: luchihoratiu/debug-via-ssh@main
+        with:
+          NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
+          SSH_PASS: ${{ secrets.SSH_PASS }}
