--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install dependencies
         run: |
-          brew link python@3.8
+          brew link --overwrite python@3.8
           # which python3
           # python3 --version
           # which python
