--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,43 @@
+wheel
+Flask>=0.9
+Flask-Login==0.2.11
+Jinja2>=2.7.2
+MarkupSafe>=0.18
+Werkzeug>=0.9.4
+argparse>=1.2.1
+backports.ssl-match-hostname>=3.4.0.2
+boto3
+networkx
+passlib>=1.6.2
+pyparsing>=2.0.1
+python-dateutil>=2.2
+six>=1.5.2
+tornado>=3.2
+numpy>=1.8.0
+matplotlib
+xlwt>=0.7.5
+pathlib>=1.0.1
+pygraphviz>=1.3.1,<1.7
+requests>=2.20
+pandas>=0.24.2
+pulp>=1.6.8
+tqdm>=4.19.6
+scipy>=1.4.1
+flask_compress>=1.4.0
+plotly>=4.0.0
+cvxpy>=1.0.28
+scikit-learn>=0.23.0
+gevent
+iso3166
+pyproj
+gunicorn
+Pillow
+maxminddb
+maxminddb-geolite2
+pysolar
+joblib
+pystan
+#fbprophet
 tensorflow
-pygraphviz
+xmltodict>=0.12.0
+decorator
